Use @modules tags instead of explicit --add-exports args